--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -38,6 +38,9 @@
         </tr>
     </table>
 
-    <footer> <a href="Details-Page.html">Details</a> <a href="Contact-Page.html">Contact Us</a></footer>
+    <footer>
+         <a href="Details-Page.html">Details</a> <a href="oCntact-Page.html">Contact Us</a>
+         <a href="Create-Course.html">Create Your Course</a>
+        </footer>
 </body>
 </html>
