--- a/exercises/exercise/Create-Course.html
+++ b/exercises/exercise/Create-Course.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Course</title>
 </head>
+
 <body>
     <h2>Present Your Own Course, but first let's get to know you better.</h2>
 
 
     <form action="Thanks.html">
         <section>
-        <label for="FName">First name</label>
-        <input placeholder="ex. Muath" type="text" name="Fname" id="FName">
+            <label for="FName" autocomplete="given-name">First name</label>
+            <input placeholder="ex. Muath" type="text" name="Fname" id="FName">
 
-        <label for="LName">Last name</label>
-        <input placeholder="ex. Alabeedi" type="text" name="Lname" id="LName">
+            <label for="LName">Last name</label>
+            <input placeholder="ex. Alabeedi" type="text" name="Lname" id="LName" autocomplete="given-name">
         </section>
         <section>
             <label for="email">Email Address</label>
-            <input type="email" name="email" placeholder="ex. example.gmail.com">
+            <input type="email" name="email" placeholder="ex. example.gmail.com" autocomplete="given-name">
         </section>
         <section>
             <label for="cv">Upload your CV:</label>
 
-            <input type="file" name="cv"/>
+            <input type="file" name="cv" />
         </section>
+        <section>
+            <label for="Course-Subject">Choose a Course Subject:</label>
+            <input list="Courses" id="Course-Subject" name="Course-Subject" />
+    
+            <datalist id="Courses">
+                <option value="Art"></option>
+                <option value="Music"></option>
+                <option value="Programming"></option>
+                <option value="Wood Work"></option>
+                <option value="Religion"></option>
+            </datalist>
+        </section>
+
         <section>
             <label for="interview">Choose time of interview</label>
             <input type="time" name="interview" value="12:30" />
@@ -43,11 +58,12 @@
         <section>
             <label for="terms">Do you agree to our terms of services?</label>
             <input type="checkbox">
-        </section>        
+        </section>
         <section>
             <button type="submit">Submit</button>
         </section>
 
     </form>
 </body>
+
 </html>
