--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="auther" content="muath ali">
     <meta name="discription" content="discriptiooon">
     <link rel="stylesheet" href="styles.css">
     <title>Learny</title>
 </head>
+
 <body>
     <h1>Start Learning The Things You're Interested In TODAY!!</h1>
     <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
@@ -18,29 +20,33 @@
             <td>Used by People</td>
             <td>link</td>
         </thead>
-        <tr>
-            <td>Programming</td>
-            <td>Very</td>
-            <td>200M</td>
-            <td><a href="buyme">Buy</a></td>
-        </tr>
-        <tr>
-            <td>Juggling</td>
-            <td>Hardly</td>
-            <td>200k</td>
-            <td><a href="buyme">Buy</a></td>
-        </tr>
-        <tr>
-            <td>Guitar</td>
-            <td>Unneeded</td>
-            <td>200</td>
-            <td><a href="google.com/search?q=get+a+life">Buy</a></td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Programming</td>
+                <td>Very</td>
+                <td>200M</td>
+                <td><a href="buyme">Buy</a></td>
+            </tr>
+            <tr>
+                <td>Juggling</td>
+                <td>Hardly</td>
+                <td>200k</td>
+                <td><a href="buyme">Buy</a></td>
+            </tr>
+            <tr>
+                <td>Guitar</td>
+                <td>Unneeded</td>
+                <td>200</td>
+                <td><a href="google.com/search?q=get+a+life">Buy</a></td>
+            </tr>
+        </tbody>
+
     </table>
 
     <footer>
-         <a href="Details-Page.html">Details</a> <a href="oCntact-Page.html">Contact Us</a>
-         <a href="Create-Course.html">Create Your Course</a>
-        </footer>
+        <a href="Details-Page.html">Details</a> <a href="oCntact-Page.html">Contact Us</a>
+        <a href="Create-Course.html">Create Your Course</a>
+    </footer>
 </body>
+
 </html>
