--- a/exercises/exercise/Contact-Page.html
+++ b/exercises/exercise/Contact-Page.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <h1>Our Costumer Satisfaction is Our Top Priorty</h1>
-    <form action="Concern-Confirmation.html">
-        <label for="concern">Problem Discription</label>
-        <textarea name="concern" id="concern" cols="30" rows="5"></textarea>
-        <input type="submit">
-    </form>
+    <section>
+        <form action="Concern-Confirmation.html">
+            <label for="concern">Problem Discription</label>
+            <textarea name="concern" id="concern" cols="30" rows="5"></textarea>
+            <input type="submit">
+        </form>
+    </section>
+
 </body>
 </html>
