--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -44,8 +44,10 @@
     </table>
 
     <footer>
-        <a href="Details-Page.html">Details</a> <a href="oCntact-Page.html">Contact Us</a>
+        <a href="Details-Page.html">Details</a> 
+        <a href="Contact-Page.html">Contact Us</a>
         <a href="Create-Course.html">Create Your Course</a>
+        <small>all rights belong to Alabeedi group</small>
     </footer>
 </body>
 
