made the website dark themed

--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="auther" content="muath ali">
     <meta name="discription" content="discriptiooon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dark_theme.css">
     <title>Learny</title>
 </head>
 
