--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -13,7 +13,7 @@
     <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
     <p>This website will help users learn the skills which they think are interesting</p>
 
-    <table>
+    <table id="tbl">
         <thead>
             <td>Skill</td>
             <td>Importance</td>
@@ -21,7 +21,7 @@
             <td>link</td>
         </thead>
         <tbody>
-            <tr>
+            <tr class>
                 <td>Programming</td>
                 <td>Very</td>
                 <td>200M</td>
@@ -33,8 +33,8 @@
                 <td>200k</td>
                 <td><a href="buyme">Buy</a></td>
             </tr>
-            <tr>
-                <td>Guitar</td>
+            <tr class="red">
+                <td class="last">Guitar</td>
                 <td>Unneeded</td>
                 <td>200</td>
                 <td><a href="google.com/search?q=get+a+life">Buy</a></td>
