--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Start Learning The Things You're Interested In TODAY!!</h1>
+    <h1 class="main-heading">Start Learning The Things You're Interested In TODAY!!</h1>
     <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
-    <p>This website will help users learn the skills which they think are interesting</p>
+    <p class="catchy-p">This website will help users learn the skills which they think are interesting</p>
 
     <table id="tbl">
         <thead>
