added an arabic version to the website

--- a/exercises/exercise/ar-website/Thanks-ar.html
+++ b/exercises/exercise/ar-website/Thanks-ar.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dark_theme.css">
 
-    <title>تم استلام الطلب</title>
+    <title>تسم استلام الطلب</title>
 </head>
 <body>
-    <h1>تم استلام طلبك</h1>
-    <a href="index-ar.html">عد للصفحة الرئيسية</a>
+    <h1>شكرا لتقديمك على موقعنا، طلبك قيد المراجعة.</h1>
+
+    <a href="index-ar.html">الصفحة الرئيسية</a>
 </body>
 </html>
