--- a/exercises/exercise/ar-website/index-ar.html
+++ b/exercises/exercise/ar-website/index-ar.html
@@ -45,9 +45,9 @@
     </table>
 
     <footer>
-        <a href="Details-Page.html">التفاصيل</a> 
-        <a href="Contact-Page.html">تواصل معنا</a>
-        <a href="Create-Course.html">اصنع دورتك</a>
+        <a href="Details-Page-ar.html">التفاصيل</a> 
+        <a href="Contact-Page-ar.html">تواصل معنا</a>
+        <a href="Create-Course-ar.html">اصنع دورتك</a>
         <small>جميع الحقوق تنتمي لمجموعة العبيدي</small>
     </footer>
 </body>
