--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -47,7 +47,8 @@
         <a href="Details-Page.html">Details</a> 
         <a href="Contact-Page.html">Contact Us</a>
         <a href="Create-Course.html">Create Your Course</a>
-        <a href="index-ar.html">الموقع باللغة العربية</a>
+        <a href="index-ar.html">.الموقع باللغة العربية</a>
+
         <small>all rights belong to Alabeedi group</small>
     </footer>
 </body>
