--- a/exercises/exercise/Contact-Page.html
+++ b/exercises/exercise/Contact-Page.html
@@ -13,7 +13,7 @@
         <form action="Concern-Confirmation.html">
             <label for="concern">Problem Discription</label>
             <textarea name="concern" id="concern" cols="30" rows="5"></textarea>
-            <input type="submit">
+            <button type="submit">submit</button>
         </form>
     </section>
 
