--- a/exercises/exercise/ar-website/index-ar.html
+++ b/exercises/exercise/ar-website/index-ar.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="Details-Page-ar.html">التفاصيل</a> 
+        <a href="Contact-Page-ar.html">تواصل معنا</a>
+        <a href="Create-Course-ar.html">اصنع دورتك</a>
+    </nav>
     <h1 class="main-heading">ابدأ تعلم كل ما يهمك اليوم!!</h1>
     <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
     <p class="catchy-p">هذا الموقع سيساعد المستخدمين لتعلم كل ماهو مفيد وممتع.</p>
