--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <img id="burger" src="/exercises/exercise/Resources/ham_icon.png" alt="nav icon" width="15px" height="15px">
+        <div class="links">
+            <a id="first" href="Details-Page.html">Details</a> 
+            <a id="second" href="Contact-Page.html">Contact Us</a>
+            <a id="third" href="Create-Course.html">Create Your Course</a>
+        </div>
+
+    </nav>
     <h1 class="main-heading">Start Learning The Things You're Interested In TODAY!!</h1>
     <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
     <p class="catchy-p">This website will help users learn the skills which they think are interesting</p>
