--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img class="loader" src="/exercises/exercise/Resources/loader-image.png" alt="">
+    </div>
     <nav class="nav">
         <img id="burger" src="/exercises/exercise/Resources/ham_icon.png" alt="nav icon" width="15px" height="15px">
         <div class="links">
