--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -21,9 +21,12 @@
         </div>
 
     </nav>
-    <h1 class="main-heading">Start Learning The Things You're Interested In TODAY!!</h1>
-    <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
-    <p class="catchy-p">This website will help users learn the skills which they think are interesting</p>
+    <main>
+        <h1 class="main-heading">Start Learning The Things You're Interested In TODAY!!</h1>
+        <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
+        <p class="catchy-p">This website will help users learn the skills which they think are interesting</p>
+    
+    </main>
 
     <table id="tbl">
         <thead>
@@ -33,13 +36,13 @@
             <td>link</td>
         </thead>
         <tbody>
-            <tr class>
+            <tr class="red">
                 <td>Programming</td>
                 <td>Very</td>
                 <td>200M</td>
                 <td><a href="buyme">Buy</a></td>
             </tr>
-            <tr>
+            <tr class="red">
                 <td>Juggling</td>
                 <td>Hardly</td>
                 <td>200k</td>
