--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -23,40 +23,50 @@
     </nav>
     <main>
         <h1 class="main-heading">Start Learning The Things You're Interested In TODAY!!</h1>
-        <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
+        <div style="position: relative;">
+            <img src="Resources/sign-post-5655110_1280.png" alt="An image which give you 4 options to chose from">
+            <p class="watermark">MA</p>
+        </div>
         <p class="catchy-p">This website will help users learn the skills which they think are interesting</p>
-    
+        <section class="side-flow">
+            <div class="card-title-container">
+                <h2 class="title-of-card">SKILLS</h2>
+                <P class="date">10/3/2023</P>
+            </div>
+
+            <table id="tbl">
+                <thead>
+                    <td>Skill</td>
+                    <td>Importance</td>
+                    <td>Used by People</td>
+                    <td>link</td>
+                </thead>
+                <tbody>
+                    <tr class="red">
+                        <td>Programming</td>
+                        <td>Very</td>
+                        <td>200M</td>
+                        <td><a href="buyme">Buy</a></td>
+                    </tr>
+                    <tr class="red">
+                        <td>Juggling</td>
+                        <td>Hardly</td>
+                        <td>200k</td>
+                        <td><a href="buyme">Buy</a></td>
+                    </tr>
+                    <tr class="red">
+                        <td class="last">Guitar</td>
+                        <td>Unneeded</td>
+                        <td>200</td>
+                        <td><a href="google.com/search?q=get+a+life">Buy</a></td>
+                    </tr>
+                </tbody>
+        
+            </table>
+        </section>
     </main>
 
-    <table id="tbl">
-        <thead>
-            <td>Skill</td>
-            <td>Importance</td>
-            <td>Used by People</td>
-            <td>link</td>
-        </thead>
-        <tbody>
-            <tr class="red">
-                <td>Programming</td>
-                <td>Very</td>
-                <td>200M</td>
-                <td><a href="buyme">Buy</a></td>
-            </tr>
-            <tr class="red">
-                <td>Juggling</td>
-                <td>Hardly</td>
-                <td>200k</td>
-                <td><a href="buyme">Buy</a></td>
-            </tr>
-            <tr class="red">
-                <td class="last">Guitar</td>
-                <td>Unneeded</td>
-                <td>200</td>
-                <td><a href="google.com/search?q=get+a+life">Buy</a></td>
-            </tr>
-        </tbody>
 
-    </table>
 
     <footer>
         <a href="Details-Page.html">Details</a> 
