--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=width, initial-scale=1.0">
     <meta name="auther" content="muath ali">
     <meta name="discription" content="discriptiooon">
     <link rel="stylesheet" href="dark_theme.css">
@@ -13,7 +14,7 @@
         <img class="loader" src="/exercises/exercise/Resources/loader-image.png" alt="">
     </div>
     <nav class="nav">
-        <img id="burger" src="/exercises/exercise/Resources/ham_icon.png" alt="nav icon" width="15px" height="15px">
+        <img id="burger" src="/exercises/exercise/Resources/ham_icon.png" alt="nav icon">
         <div class="links">
             <a id="first" href="Details-Page.html">Details</a> 
             <a id="second" href="Contact-Page.html">Contact Us</a>
