--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -6,6 +6,7 @@
     <meta name="auther" content="muath ali">
     <meta name="discription" content="discriptiooon">
     <link rel="stylesheet" href="dark_theme.css">
+    <link rel='stylesheet' media='screen and (min-width: 769px)' href='desktop.css' />
     <title>Learny</title>
 </head>
 
