--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=width, initial-scale=1.0">
     <meta name="auther" content="muath ali">
     <meta name="discription" content="discriptiooon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="dark_theme.css">
     <link rel='stylesheet' media='screen and (min-width: 769px)' href='desktop.css' />
     <title>Learny</title>
@@ -17,7 +19,7 @@
     <nav class="nav">
         <img id="burger" src="/exercises/exercise/Resources/ham_icon.png" alt="nav icon">
         <div class="links">
-            <a id="first" href="Details-Page.html">Details</a> 
+            <a id="first" href="Details-Page.html">Details</a>
             <a id="second" href="Contact-Page.html">Contact Us</a>
             <a id="third" href="Create-Course.html">Create Your Course</a>
         </div>
@@ -63,15 +65,24 @@
                         <td><a href="google.com/search?q=get+a+life">Buy</a></td>
                     </tr>
                 </tbody>
-        
+
             </table>
         </section>
+
+        <div class="card" style="width: 18rem; background-color: #505b70; margin-top: 10px;">
+            <img src="Resources/teacher.jpg" class="card-img-top" alt="teacher icon">
+            <div class="card-body">
+                <h5 class="card-title" style="color: aliceblue;">Teacher Muath</h5>
+                <p class="card-text "style="color: aliceblue;">learn about webdev</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
     </main>
 
 
 
     <footer>
-        <a href="Details-Page.html">Details</a> 
+        <a href="Details-Page.html">Details</a>
         <a href="Contact-Page.html">Contact Us</a>
         <a href="Create-Course.html">Create Your Course</a>
         <a href="index-ar.html">.الموقع باللغة العربية</a>
@@ -79,5 +90,15 @@
         <small>all rights belong to Alabeedi group</small>
     </footer>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
 </html>
