--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -85,11 +85,15 @@
         <a href="Details-Page.html">Details</a>
         <a href="Contact-Page.html">Contact Us</a>
         <a href="Create-Course.html">Create Your Course</a>
+        <a href="mini-games.html">mini-games</a>
         <a href="index-ar.html">.الموقع باللغة العربية</a>
 
         <small>all rights belong to Alabeedi group</small>
     </footer>
+
+    
 </body>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -100,5 +104,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-
 </html>
