--- a/exercises/exercise/mini-games.html
+++ b/exercises/exercise/mini-games.html
@@ -58,6 +58,7 @@
             </div>
         </div>
     </div>
+    <button id="reset" type="button" class="btn btn-secondary reset-btn">Reset</button>
     <script src="tic-tac-toe.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
