--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -87,8 +87,9 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
-    </main>
+        <h4 id="hobby">here is a random hobby you can start looking into: </h4>
 
+    </main>
 
 
     <footer>
