--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    
 
+    <canvas id="screenCanv" class="screenCanv"></canvas>
     <div class="loader">
         <img class="loader" src="/exercises/exercise/Resources/loader-image.png" alt="">
     </div>
@@ -112,5 +112,6 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
     <script src="list-to-html.js"></script>
-    
+<script src="screenSaver.js"></script>    
+
 </html>
