--- a/exercises/exercise/index.html
+++ b/exercises/exercise/index.html
@@ -90,8 +90,17 @@
         <h4 id="hobby">here is a random hobby you can start looking into: </h4>
 
     </main>
-
-
+    <div id="reactComponent"></div>
+    <script
+    src="https://unpkg.com/react@18/umd/react.development.js"
+    crossorigin
+  ></script>
+  <script
+    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    crossorigin
+  ></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="reactComp.js" type="text/babel"></script>
     <footer>
 
 
@@ -113,5 +122,9 @@
     crossorigin="anonymous"></script>
     <script src="list-to-html.js"></script>
 <script src="screenSaver.js"></script>    
+
+
+
+
 
 </html>
